Serve frontend with backend

--- a/package.json
+++ b/package.json
@@ -4,9 +4,8 @@
   "description": "A modern chat application with Telegram-like features",
   "main": "index.js",
   "scripts": {
-    "dev": "concurrently \"npm run dev:server\" \"npm run dev:client\"",
+    "dev": "npm run dev:server",
     "dev:server": "cd server && npm run dev",
-    "dev:client": "cd client && npm run dev",
     "build": "npm run build:client && npm run build:server",
     "build:client": "cd client && npm run build",
     "build:server": "cd server && npm run build",
