fix build errors and update Dockerfile

--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -24,7 +24,8 @@
     "paths": {
       "@/*": ["./src/*"],
       "@/shared/*": ["../shared/*"]
-    }
+    },
+    "types": ["node"]
   },
   "include": [
     "src/**/*",
