--- a/server/.env.example
+++ b/server/.env.example
@@ -1,50 +1,1 @@
-# Server Configuration
-NODE_ENV=development
-PORT=3001
-HOST=localhost
-
-# Database Configuration (Supabase)
-DATABASE_URL=postgresql://username:password@localhost:5432/chatapp
-SUPABASE_URL=your_supabase_url
-SUPABASE_SERVICE_KEY=your_supabase_service_key
-
-# JWT Configuration
-JWT_SECRET=your_super_secret_jwt_key_here
-JWT_EXPIRES_IN=7d
-JWT_REFRESH_SECRET=your_refresh_token_secret
-JWT_REFRESH_EXPIRES_IN=30d
-
-# Redis Configuration (Optional - for caching and sessions)
-REDIS_URL=redis://localhost:6379
-REDIS_PASSWORD=
-
-# File Upload Configuration
-MAX_FILE_SIZE=10485760
-ALLOWED_FILE_TYPES=image/jpeg,image/png,image/gif,image/webp,video/mp4,video/webm,audio/mp3,audio/wav,application/pdf,text/plain
-UPLOAD_PATH=uploads
-
-# Email Configuration (for notifications)
-SMTP_HOST=smtp.gmail.com
-SMTP_PORT=587
-SMTP_USER=your_email@gmail.com
-SMTP_PASS=your_app_password
-FROM_EMAIL=noreply@chatapp.com
-FROM_NAME=ChatApp
-
-# Rate Limiting
-RATE_LIMIT_WINDOW_MS=900000
-RATE_LIMIT_MAX_REQUESTS=100
-
-# CORS Configuration
-CORS_ORIGIN=http://localhost:3001
-
-# Admin Configuration
-ADMIN_EMAIL=admin@chatapp.com
-ADMIN_PASSWORD=admin123456
-
-# Logging
-LOG_LEVEL=info
-LOG_FILE=logs/app.log
-
-# WebSocket Configuration
-SOCKET_CORS_ORIGIN=http://localhost:3001
+# See ../.env.example for configuration
