feat: allow DB configuration via env

--- a/.env.example
+++ b/.env.example
@@ -9,6 +9,12 @@ NODE_ENV=development
 PORT=3001
 HOST=localhost
 DATABASE_URL=postgresql://username:password@localhost:5432/chatapp
+# Optional individual database settings (used if DATABASE_URL is not set)
+DB_HOST=localhost
+DB_PORT=5432
+DB_NAME=chatapp
+DB_USER=username
+DB_PASSWORD=password
 SUPABASE_URL=your_supabase_url
 SUPABASE_SERVICE_KEY=your_supabase_service_key
 JWT_SECRET=your_super_secret_jwt_key_here
